--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,22 @@
 }
 
 .kit-id-example{
-  width: 400px;
+  width: 300px;
   max-width: 100%;
 }
 
 hr{
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .tag{
   font-size: 1rem;
   padding: 0;
   font-weight: inherit;
+}
+
+a.readme{
+  text-align: center;
+  display: block;
 }
