Download xml and json files with the font name

--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,16 @@ a.readme{
   text-align: center;
   display: block;
 }
+
+.textarea-wrapper{
+  position: relative;
+}
+
+.textarea-wrapper .btn{
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-top-left-radius: 0;
+  border-bottom-right-radius: 0;
+  display: none;
+}
